Exc5/back-end-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app-service
  labels:
    role: back-end-api
spec:
  selector:
    role: back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
