Exc5/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app-service
  labels:
    role: front-end
spec:
  selector:
    role: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
